crates/language-v2/tests/src/fail/p2_specifiers/hard_fork_redundant_always/test.stderr
error: Explicit 'Always' is redundant, since it is the default when 'evm_enabled' is not specified.
  --> src/fail/p2_specifiers/hard_fork_redundant_always/test.rs:25:78
   |
25 |             definitions = [BuiltInDefinition(name = MyBuiltIn, evm_enabled = Always)]
   |                                                                              ^^^^^^
